# Riru-InternalBrowserRedirect

./: .gitignore  DONATE.md  README.md  README_zh.md  build.gradle  gradle.properties  local.properties  settings.gradle
android-sdk/: FROM.txt  android.jar.REMOVED.git-id
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: color_header_switch.xml
app/src/main/res/drawable/: ic_add.xml  ic_error.xml  ic_info.xml  ic_installed.xml  ic_unknown_app.xml  ic_update.xml
app/src/main/res/layout/: activity_edit_app.xml  activity_main.xml  activity_redirect.xml  activity_rule_viewer.xml  adapter_app_item.xml  adapter_app_list.xml  (+11 more)
buildSrc/: build.gradle
classpath/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
hideapi/: build.gradle
hideapi/src/main/: AndroidManifest.xml
module/: build.gradle
module/src/main/cpp/: CMakeLists.txt  hook.c  inject.c  inject.h  main.c  remote.c  remote.h  utils.c  utils.h
remote/: build.gradle  proguard-rules.pro
remote/src/main/: AndroidManifest.xml
remote/src/main/cpp/: CMakeLists.txt  inject.c  inject.h  main.c
shared/: build.gradle
shared/src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  hook.c  hook.h  main.c
src/main/cpp/jni/: Application.mk
src/main/cpp/jni/main/: Android.mk  hook.c  hook.h  log.h  main.c  riru.h
src/main/cpp/libriru_utils/: CMakeLists.txt  riru_utils.c  riru_utils.h
src/main/cpp/libriru_utils/libriru/: riru.c
src/main/raw/magisk/: config.sh  module.prop
src/main/raw/magisk-module-config/: config.sh  module.prop
(+285 files in other folders)
